--- a/src/sidepanel/assets/profile-page.css
+++ b/src/sidepanel/assets/profile-page.css
@@ -1,6 +1,19 @@
 .container-profilepage {
     margin: 0;
     padding: 2px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.recent-container {
+    flex-grow: -1;
+    overflow: hidden;
+}
+
+.profile-send-message {
+    position: absolute;
+    top: 30%;
 }
 
 body::-webkit-scrollbar {
