--- a/src/sidepanel/assets/profile-send-message.css
+++ b/src/sidepanel/assets/profile-send-message.css
@@ -1,6 +1,6 @@
 @import url("https: //fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0");
 
-.container-send-message {
+.container-profile-send-message {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -13,7 +13,7 @@
     margin: 1px;
 }
 
-.message-input {
+.profile-message-input {
     flex: 1;
     min-width: 0;
     border: none;
