--- a/src/sidepanel/assets/profile-page.css
+++ b/src/sidepanel/assets/profile-page.css
@@ -14,6 +14,8 @@
 .profile-send-message {
     position: absolute;
     top: 30%;
+    width: 100%;
+    padding: 5px;
 }
 
 body::-webkit-scrollbar {
