--- a/src/sidepanel/assets/profile-action-card.css
+++ b/src/sidepanel/assets/profile-action-card.css
@@ -1,4 +1,14 @@
-@import url('https: //fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0');
+/* @import url('https: //fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0'); */
+
+.profile-button {
+    padding: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.profile-button:hover {
+    background-color: #eee;
+}
 
 .profile-modal {
     display: flex;
