--- a/src/sidepanel/assets/recent.css
+++ b/src/sidepanel/assets/recent.css
@@ -22,4 +22,10 @@
     background: none;
     border: none;
     cursor: pointer;
+    padding: 5px;
+}
+
+.see-more:hover {
+    background-color: #fff;
+    border-radius: 50%;
 }
